--- a/package.json
+++ b/package.json
@@ -8,14 +8,7 @@
     "asynckit": "^0.4.0",
     "chalk": "^4.1.0",
     "discord.js-commando": "^0.12.3",
-    "ffmpeg-static": "^4.3.0",
-    "moment": "^2.29.1",
-    "ms": "^2.1.3",
-    "ms-advanced": "^1.0.1",
-    "node-fetch": "^2.6.1",
-    "quick.hook": "^1.5.1",
-    "simple-youtube-api": "^5.2.1",
-    "ytdl-core": "^4.5.0"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {},
   "scripts": {
